--- a/src/main/webapp/resources/bill/opdBillPrintRuhunu_pack.xhtml
+++ b/src/main/webapp/resources/bill/opdBillPrintRuhunu_pack.xhtml
@@ -190,7 +190,9 @@
                             </tr>
                             <tr>
                                 <td colspan="5" style="text-align: center;" >
-                                    <p:barcode value="#{cc.attrs.bill.idStr}" type="code128" ></p:barcode>
+                                    <p:barcode value="#{cc.attrs.bill.idStr}"
+                                               style="width: 8cm; overflow: hidden; "
+                                               type="code128" ></p:barcode>
                                 </td>
                             </tr>
 
