--- a/src/main/webapp/opd/patient.xhtml
+++ b/src/main/webapp/opd/patient.xhtml
@@ -91,8 +91,13 @@
                                     <p:outputLabel value="Credit Limit:" rendered="#{patientController.current.hasAnAccount}" />
                                     <p:outputLabel value="#{patientController.current.creditLimit}" rendered="#{patientController.current.hasAnAccount}" />
 
-
+                                   
+                                    
                                 </p:panelGrid>
+                                 <!-- Barcode -->
+                                    <h:panelGroup  style="text-align: center; width: 100%;" layout="block">
+                                        <p:barcode value="#{patientController.current.idStr}" type="code39" cache="false" style="width:20%;" />
+                                    </h:panelGroup>
                             </div>
                             <div  class="col-md-4 d-flex flex-column  gap-2" >
                                 <p:commandButton value="Admit" 
