--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -199,7 +199,7 @@
                                         <p:tab title="Summary">
                                             <div class="d-grid gap-2">
                                                 <p:commandButton   class="w-100"  ajax="false" value="1. Head Count" action="#{reportController.navigateToHeadCountReport()}" />
-                                                <p:commandButton   class="w-100"  ajax="false" value="2. Employee Worked Day Report" />
+                                                <p:commandButton   class="w-100"  ajax="false" value="2. Employee Worked Day Report" action="#{reportController.navigateToEmployeeWorkedDayReport()}" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="3. Employee Worked Day Report(Salary Cycle)" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="4. Month End Employee Working Time + Over Time Report" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="5. Month End Employee(No Pay) Report-By Minute" />
