Closes Issue#1520 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -262,7 +262,7 @@
 
                                 <p:tab title="Management Reports">
                                     <div class="d-grid gap-2">
-                                        <p:commandButton   class="w-100"  ajax="false" value="1. Room Occupancy" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="1. Room Occupancy" action="/reports/managementReports/room_occupency" />
                                         <p:commandButton   class="w-100"  ajax="false" value="2. Surgery Survey" />
                                         <p:commandButton   class="w-100"  ajax="false" value="3. Surgery Status" />
                                         <p:commandButton   class="w-100"  ajax="false" value="4. Surgery Cost Estimation" />
