Closes #1521 Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -201,7 +201,7 @@
                                                 <p:commandButton   class="w-100"  ajax="false" value="1. Head Count" action="#{reportController.navigateToHeadCountReport()}" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="2. Employee Worked Day Report" action="#{reportController.navigateToEmployeeWorkedDayReport()}" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="3. Employee Worked Day Report(Salary Cycle)" action="#{reportController.navigateToEmployeeWorkedDayReportSalaryCycle()}"/>
-                                                <p:commandButton   class="w-100"  ajax="false" value="4. Month End Employee Working Time + Over Time Report" />
+                                                <p:commandButton   class="w-100"  ajax="false" value="4. Month End Employee Working Time + Over Time Report" action="#{reportController.navigateToMonthendEmployeeWorkingTimeAndOvertime()}"/>
                                                 <p:commandButton   class="w-100"  ajax="false" value="5. Month End Employee(No Pay) Report-By Minute" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="6. Month End Employee Summary" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="7. Finger Analysis Report by Salary Cycle" />
