--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -263,7 +263,7 @@
                                 <p:tab title="Management Reports">
                                     <div class="d-grid gap-2">
                                         <p:commandButton   class="w-100"  ajax="false" value="1. Room Occupancy" action="/reports/managementReports/room_occupency" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="2. Surgery Survey" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="2. Surgery Survey" action="/reports/managementReports/surgery_survey"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="3. Surgery Status" />
                                         <p:commandButton   class="w-100"  ajax="false" value="4. Surgery Cost Estimation" />
                                         <p:commandButton   class="w-100"  ajax="false" value="5. Duration Service Report" />
