--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -203,7 +203,7 @@
                                                 <p:commandButton   class="w-100"  ajax="false" value="3. Employee Worked Day Report(Salary Cycle)" action="#{reportController.navigateToEmployeeWorkedDayReportSalaryCycle()}"/>
                                                 <p:commandButton   class="w-100"  ajax="false" value="4. Month End Employee Working Time + Over Time Report" action="#{reportController.navigateToMonthendEmployeeWorkingTimeAndOvertime()}"/>
                                                 <p:commandButton   class="w-100"  ajax="false" value="5. Month End Employee(No Pay) Report-By Minute" action="#{reportController.navigateToMonthEndEmployeeNoPayReportByMinutes()}" />
-                                                <p:commandButton   class="w-100"  ajax="false" value="6. Month End Employee Summary" />
+                                                <p:commandButton   class="w-100"  ajax="false" value="6. Month End Employee Summary" action="#{reportController.navigateToMonthEndEmployeeSummery()}"  />
                                                 <p:commandButton   class="w-100"  ajax="false" value="7. Finger Analysis Report by Salary Cycle" />
 
                                             </div>
