Closes #1536 Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -204,7 +204,7 @@
                                                 <p:commandButton   class="w-100"  ajax="false" value="4. Month End Employee Working Time + Over Time Report" action="#{reportController.navigateToMonthendEmployeeWorkingTimeAndOvertime()}"/>
                                                 <p:commandButton   class="w-100"  ajax="false" value="5. Month End Employee(No Pay) Report-By Minute" action="#{reportController.navigateToMonthEndEmployeeNoPayReportByMinutes()}" />
                                                 <p:commandButton   class="w-100"  ajax="false" value="6. Month End Employee Summary" action="#{reportController.navigateToMonthEndEmployeeSummery()}"  />
-                                                <p:commandButton   class="w-100"  ajax="false" value="7. Finger Analysis Report by Salary Cycle" />
+                                                <p:commandButton   class="w-100"  ajax="false" value="7. Finger Analysis Report by Salary Cycle" action="#{reportController.navigateToFingerAnalysisReportBySalaryCycle()}" />
 
                                             </div>
 
