Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/channel/channel_report_agent_history.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_history.xhtml
@@ -29,7 +29,7 @@
 
                     </p:panelGrid> 
                     
-                    <h:panelGrid columns="3">
+                    <h:panelGrid columns="3" class="my-2">
                             <p:commandButton action="#{channelReportController.createAgentHistoryTable}" value="Fill" ajax="false" ></p:commandButton> 
                             <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="margin-right: 10px; margin-left: 10px">
                                 <p:printer target="reportPrint"  />
