--- a/src/main/webapp/channel/channel_report_agent_balance.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_balance.xhtml
@@ -15,16 +15,13 @@
             <p:panel header="Cannel Agent Reperence Book">
                 <f:facet name="header" >
                     <p:outputLabel value="Cannel Agent Current Balance" />
-                    <p:commandButton id="btnBack" value="Back" 
-                                     action="/channel/channel_reports" style="float: right;"
-                                     ajax="false">
-                    </p:commandButton>
+                    
                 </f:facet>
                 <h:panelGrid>
-                    <h:panelGrid columns="4" >
+                    <h:panelGrid columns="4" class="my-2">
                         <p:selectBooleanCheckbox value="#{channelReportTempController.reportKeyWord.additionalDetails}" itemLabel="Without Inactive" />
                         <p:commandButton value="Fill" action="#{channelReportTempController.createAgencyBalanceTable()}" ajax="false" ></p:commandButton> 
-                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton">
+                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="margin-right: 10px; margin-left: 10px">
                             <p:printer target="reportPrint"  />
                         </p:commandButton>
                         <p:commandButton  ajax="false" value="Excel" styleClass="noPrintButton">
@@ -41,8 +38,8 @@
                             <p:outputLabel value="Agency Balance" />
                             <br></br>
                             <p:outputLabel value="Print Time" />
-                            <p:outputLabel value="#{commonController.currentDateTime}" >
-                                <f:convertDateTime pattern="yyyy MMMM dd hh:mm:ss a" />
+                            <p:outputLabel class="ml-2" value="#{commonController.currentDateTime}" >
+                                <f:convertDateTime pattern="dd MMMM yyyy HH:mm:ss" />
                             </p:outputLabel>
                         </f:facet>
                         <p:column>
