--- a/src/main/webapp/channel/channel_report_agent_history_1.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_history_1.xhtml
@@ -15,10 +15,7 @@
             <p:panel header="Statement Of Agent Account">
                 <f:facet name="header">
                     <p:outputLabel value="Statement Of Agent Account" />
-                    <p:commandButton id="btnBack" value="Back" 
-                                     action="/channel/channel_reports" style="float: right;"
-                                     ajax="false">
-                    </p:commandButton>
+                    
                 </f:facet>
 
                 <p:panel>
@@ -95,10 +92,10 @@
                             </p:column>
                             <p:column>
                                 <p:outputLabel value="#{a.bill.singleBillSession.sessionDate}" >
-                                    <f:convertDateTime pattern="dd/MM/yyyy " />
+                                    <f:convertDateTime pattern="dd MMM yyyy " />
                                 </p:outputLabel>
                                 <p:outputLabel value="#{a.bill.singleBillSession.serviceSession.startingTime}" >
-                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="hh:mm:ss"  />
+                                    <f:convertDateTime  timeZone="Asia/Colombo" pattern="HH:mm:ss"  />
                                 </p:outputLabel>
                             </p:column>
                             <p:column rendered="false">
