--- a/src/main/webapp/resources/ezcomp/menu.xhtml
+++ b/src/main/webapp/resources/ezcomp/menu.xhtml
@@ -80,7 +80,7 @@
 
                             <p:menuitem 
                                 ajax="false" 
-                                action="/opd_bill_package_medical" 
+                                action="#{billPackageMedicalController.navigateToMedicalPakageBillingFromMenu()}" 
                                 actionListener="#{billPackageController.clearBillValues}" 
                                 value="Medical Package Billing"
                                 icon="fa fa-fw fa-medkit"
