--- a/src/main/webapp/opd/patient_search.xhtml
+++ b/src/main/webapp/opd/patient_search.xhtml
@@ -162,6 +162,13 @@
                                                                      styleClass="mx-1 mb-2">
                                                         <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
                                                     </p:commandButton>
+                                                    
+                                                    <p:commandButton value="Medical Pakage Billing"
+                                                                     action="#{patientController.navigateToMedicalPakageBillingFromPatientProfile()}"
+                                                                     ajax="false"
+                                                                     styleClass="mx-1 mb-2">
+                                                        <f:setPropertyActionListener value="#{p}" target="#{patientController.current}" />
+                                                    </p:commandButton>
 
                                                     <p:commandButton value="Billing for Cashier"
                                                                      action="#{patientController.navigateToBillingForCashierFromPatientProfile()}"
