--- a/src/main/webapp/channel/channel_report_agent_wise_channel_total.xhtml
+++ b/src/main/webapp/channel/channel_report_agent_wise_channel_total.xhtml
@@ -51,7 +51,7 @@
                                 <p:commandButton action="#{channelReportTempController.createAgentWiseAppoinmentTotal()}" value="Totals" ajax="false" />
                             </h:panelGrid>
                         </h:panelGroup>
-                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton">
+                        <p:commandButton ajax="false" value="Print" styleClass="noPrintButton" style="margin-left: 10px">
                             <p:printer target="reportPrint"  />
                         </p:commandButton>
                     </h:panelGrid> 
