--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -266,7 +266,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="2. Surgery Survey" action="/reports/managementReports/surgery_survey"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="3. Surgery Status" action="/reports/managementReports/surgery_status"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="4. Surgery Cost Estimation" action="/reports/managementReports/surgery_cost_estimation"/>
-                                        <p:commandButton   class="w-100"  ajax="false" value="5. Duration Service Report" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="5. Duration Service Report" action="/reports/managementReports/duration_service_report"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="6. Pharmacy Department Wise Sale Report" />
                                         <p:commandButton   class="w-100"  ajax="false" value="7. Referring Doctor Wise Revenue" />
                                         <p:commandButton   class="w-100"  ajax="false" value="8. OT Room Wise Sergery Count" />
