--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -85,7 +85,7 @@
                                 <p:tab title="Financial Reports">
                                     <div class="d-grid gap-2">
                                         <p:commandButton   class="w-100"  ajax="false" value="1. Daily return" action="/reports/financialReports/daily_return"/>
-                                        <p:commandButton   class="w-100"  ajax="false" value="2. Income Category Wise Summery (Daily Return Summery)" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="2. Income Category Wise Summery (Daily Return Summery)"  action="/reports/financialReports/income_category_wise_report"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="3. IP Income Category Wise Report" />
                                         <p:commandButton   class="w-100"  ajax="false" value="4. Service Category Wise Bill Details" />
                                         <p:commandButton   class="w-100"  ajax="false" value="5. Professional Fees Payment" />
