--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -227,14 +227,14 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="2. Consumtion" />
                                         <p:commandButton   class="w-100"  ajax="false" value="3. Stock Transfers" />
                                         <p:commandButton   class="w-100"  ajax="false" value="4. Cost Of Good Sold" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="5. Good in Transit" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="6. GRN Report" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="5. Good in Transit" action="#{reportController.navigateToGoodInTransit()}" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="6. GRN Report" action="#{reportController.navigateToGrnReport()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="7. Batch Wise Stock" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="8. Slow/Fast/None Movement Report" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="9. Before Stock Taking" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="11. After Stock Taking" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="12. Stock Leger" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="13. Expiry Item Report" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="8. Slow/Fast/None Movement Report" action="#{reportController.navigateToSlowFastNoneMovement()}" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="9. Before Stock Taking" action="#{reportController.navigateToBeforeStockTaking()}" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="11. After Stock Taking" action="#{reportController.navigateToAfterStockTaking()}" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="12. Stock Leger" action="#{reportController.navigateToStockLedger()}" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="13. Expiry Item Report" action="#{reportController.navigateToExpiryItem()}" />
                                     </div>
                                 </p:tab>
 
