--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -214,7 +214,7 @@
 
                                 <p:tab title="Inpatient Reports">
                                     <div class="d-grid gap-2">
-                                        <p:commandButton   class="w-100"  ajax="false" value="1. Admission and Discharge" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="1. Admission and Discharge" action="#{reportController.navigateToAdmissionDischargeReport()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="2. IP Unsettled Invoices" />
                                         <p:commandButton   class="w-100"  ajax="false" value="3. Room Change" />
                                         <p:commandButton   class="w-100"  ajax="false" value="4. Admission Category Wise Admission" />
