--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -88,7 +88,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="2. Income Category Wise Summery (Daily Return Summery)"  action="/reports/financialReports/income_category_wise_report"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="3. IP Income Category Wise Report" />
                                         <p:commandButton   class="w-100"  ajax="false" value="4. Service Category Wise Bill Details" action="/reports/financialReports/service_category_wise_bill_detail"/>
-                                        <p:commandButton   class="w-100"  ajax="false" value="5. Professional Fees Payment" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="5. Professional Fees Payment" action="/reports/financialReports/professional_fee_payment"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="6. Discount" />
                                         <p:commandButton   class="w-100"  ajax="false" value="7. Outside Payments" />
                                         <p:commandButton   class="w-100"  ajax="false" value="8. Collection Center Wise Income" />
