--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -223,7 +223,7 @@
 
                                 <p:tab title="Inventory Reports">
                                     <div class="d-grid gap-2">
-                                        <p:commandButton   class="w-100"  ajax="false" value="1. Closing Stock" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="1. Closing Stock" action="#{reportController.navigateToClosingStockReport()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="2. Consumtion" action="#{reportController.navigateToconsumption()}"  />
                                         <p:commandButton   class="w-100"  ajax="false" value="3. Stock Transfers" />
                                         <p:commandButton   class="w-100"  ajax="false" value="4. Cost Of Good Sold" />
