--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -217,7 +217,7 @@
                                         <p:commandButton   class="w-100"  ajax="false" value="1. Admission and Discharge" action="#{reportController.navigateToAdmissionDischargeReport()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="2. IP Unsettled Invoices" action="#{reportController.navigateToIpUnsettledInvoices()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="3. Room Change" />
-                                        <p:commandButton   class="w-100"  ajax="false" value="4. Admission Category Wise Admission" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="4. Admission Category Wise Admission"  action="#{reportController.navigateToAdmissionCategoryWiseAdmission()}" />
                                     </div>
                                 </p:tab>
 
