--- a/src/main/webapp/reports/index.xhtml
+++ b/src/main/webapp/reports/index.xhtml
@@ -225,7 +225,7 @@
                                     <div class="d-grid gap-2">
                                         <p:commandButton   class="w-100"  ajax="false" value="1. Closing Stock" action="#{reportController.navigateToClosingStockReport()}"/>
                                         <p:commandButton   class="w-100"  ajax="false" value="2. Consumtion" action="#{reportController.navigateToconsumption()}"  />
-                                        <p:commandButton   class="w-100"  ajax="false" value="3. Stock Transfers" />
+                                        <p:commandButton   class="w-100"  ajax="false" value="3. Stock Transfers"  action="#{reportController.navigateToStockTransferReport()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="4. Cost Of Good Sold" />
                                         <p:commandButton   class="w-100"  ajax="false" value="5. Good in Transit" action="#{reportController.navigateToGoodInTransit()}" />
                                         <p:commandButton   class="w-100"  ajax="false" value="6. GRN Report" action="#{reportController.navigateToGrnReport()}" />
