--- a/src/main/webapp/opd/patient_edit.xhtml
+++ b/src/main/webapp/opd/patient_edit.xhtml
@@ -147,12 +147,13 @@
                                                                    offLabel="No Account"
                                                                    onLabel="Has an account" ></p:selectBooleanButton>
                                         </div>
-                                        <div class="col-md-6">
-                                            <h:outputLabel class="form-label" value="Credit Limit"  />
+                                        <div class="col-md-6" >
+                                            <h:outputLabel class="form-label" value="Credit Limit" rendered="#{webUserController.hasPrivilege('Admin')}" />
                                             <h:panelGroup>
                                                 <p:inputText autocomplete="off" id="txtCreditLimit"
                                                              value="#{patientController.current.creditLimit}"
-                                                             class="form-control" />
+                                                             class="form-control"
+                                                             rendered="#{webUserController.hasPrivilege('Admin')}"/>
                                             </h:panelGroup>
                                         </div>
                                     </div>
