Signed-off-by: Thiwanka Madushan <76912747+Thiwanka570@users.noreply.github.com>

--- a/src/main/webapp/opd/patient_edit.xhtml
+++ b/src/main/webapp/opd/patient_edit.xhtml
@@ -152,7 +152,8 @@
                                             <h:panelGroup>
                                                 <p:inputText autocomplete="off" id="txtCreditLimit"
                                                              value="#{patientController.current.creditLimit}"
-                                                             class="form-control" />
+                                                             class="form-control"
+                                                             />
                                             </h:panelGroup>
                                         </div>
                                     </div>
