Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/opd/opd_bill.xhtml
+++ b/src/main/webapp/opd/opd_bill.xhtml
@@ -142,7 +142,7 @@
                                                                 id="acIx" 
                                                                 forceSelection="true"
                                                                 value="#{opdBillController.currentBillItem.item}" 
-                                                                completeMethod="#{itemController.completeOpdItems}"
+                                                                completeMethod="#{opdBillController.completeOpdItems}"
                                                                 var="ix" itemLabel="#{ix.name}" itemValue="#{ix}"
                                                                 size="10"  
                                                                 maxResults="10"
