--- a/src/main/webapp/admin/items/index.xhtml
+++ b/src/main/webapp/admin/items/index.xhtml
@@ -13,6 +13,22 @@
                     <p:panel header="Manage Items/Services" rendered="true">
                         <p:accordionPanel activeIndex="#{investigationCategoryController.manageItemIndex}" >
                             <p:ajax process="@this" ></p:ajax>
+                            <p:tab title="Item Mapping">
+                                <div class="d-grid gap-2">
+                                    <!-- Button to navigate to Manage Department Item Mappings -->
+                                    <p:commandButton class="w-100"  
+                                                     ajax="false" 
+                                                     value="Manage Department Item Mappings" 
+                                                     action="#{itemMappingController.navigateToManageDepartmentItemMappings}" />
+
+                                    <!-- Button to navigate to Manage Institution Item Mappings -->
+                                    <p:commandButton class="w-100"  
+                                                     ajax="false" 
+                                                     value="Manage Institution Item Mappings" 
+                                                     action="#{itemMappingController.navigateToManageInstitutionItemMappings}" />
+                                </div>
+
+                            </p:tab>
                             <p:tab title="Manage Services">
                                 <div class="d-grid gap-2">
                                     <p:commandButton   
