--- a/src/main/webapp/inward/inward_admission.xhtml
+++ b/src/main/webapp/inward/inward_admission.xhtml
@@ -9,19 +9,25 @@
                 xmlns:bill="http://java.sun.com/jsf/composite/inward"
                 xmlns:in="http://java.sun.com/jsf/composite/patient"
                 xmlns:credit="http://java.sun.com/jsf/composite/inward/creditCompany">
+
+
     <ui:define name="content"> 
         <h:form>
             <h:panelGroup id="gpDetail" rendered="#{!admissionController.printPreview}" >
                 <p:panel header="Admit a Patient" class="w-100" >
                     <div class="row">
-                        <div class="col-12">
+                        <div class="col-11">
                             <h:panelGrid columns="12" class="m-2 w-100" >                   
                                 <p:selectOneMenu  id="lstSelect"   value="#{admissionController.current.admissionType}" >
                                     <f:selectItem itemLabel="Select Admission Type"/>
                                     <f:selectItems  value="#{admissionTypeController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}"></f:selectItems>
                                     <p:ajax event="change" process="@this" update="bh cmbDoc" listener="#{admissionController.bhtNumberCalculation()}" />
                                 </p:selectOneMenu>
+
+                                <p:outputLabel class="border px-2 py-2" id="bh" value="#{admissionController.bhtText}"/>
+
                                 <p:outputLabel class="mx-1 " value="Room No :" />
+
                                 <p:autoComplete  forceSelection="true"  
                                                  id="cmbDoc" disabled="#{admissionController.current.admissionType eq null or admissionController.current.admissionType.roomFacilityCharge ne null}"
                                                  value="#{admissionController.patientRoom.roomFacilityCharge}" 
@@ -30,11 +36,7 @@
                                                  >                            
                                 </p:autoComplete>
 
-                                <div class="d-flex justify-content-center"> 
-                                    <p:outputLabel value="BHT No :"/>
-                                    <p:outputLabel class="mx-2" id="bh" value="#{admissionController.bhtText}"/>
-                                </div>
-                                <p:inputText class="ml-4" id="comment" value="#{admissionController.current.comments}" placeholder="Comment/Reference No"/>
+                                <p:inputText id="comment" value="#{admissionController.current.comments}" placeholder="Comment/Reference No"/>
 
                                 <p:commandButton 
                                     id="admt" 
@@ -43,7 +45,7 @@
                                     value="Admit"  />
 
                                 <div class="d-flex justify-content-end">
-                                    <p:commandButton ajax="false" value="Clear" actionListener="#{admissionController.makeNull}" />
+                                    <p:commandButton ajax="false" value="Clear" actionListener="#{admissionController.prepereToAdmitNewPatient}" />
                                 </div>
 
                                 <p:defaultCommand target="admt"/>
@@ -56,18 +58,7 @@
                     <div class="row">
                         <div class="col-6">
                             <p:panel header="Patient Detail">
-                                <p:tabView  id="tvPt" activeIndex="#{admissionController.patientSearchTab}" >
-                                    <p:ajax event="tabChange"  process="@this" listener="#{admissionController.onTabChange}" />
-                                    <p:tab  title="New Patient" id="tabNewPt">
-
-                                        <in:inputPatientDetail patient="#{admissionController.newPatient}"/>
-
-                                    </p:tab>
-                                    <p:tab id="tabSearchPt" title="Search Patient" >
-
-                                        <in:searchPatient patient="#{admissionController.current.patient}"/>
-                                    </p:tab>
-                                </p:tabView>
+                                <in:inputPatientDetail patient="#{admissionController.current.patient}"/>
                             </p:panel>
 
                             <p:panel header="Payment Detail" style="margin-top: 10px;">
@@ -92,18 +83,19 @@
                             <p:panel header="Hospital Use">
                                 <p:tabView>
                                     <p:tab title="Special Details">
-                                        <h:panelGrid columns="2" class="w-100">
+                                        <h:panelGrid columns="2" >
+
                                             <p:selectBooleanCheckbox value="#{admissionController.current.foriegner}"
-                                                                     itemLabel="Mark as Foreigner" class="my-2"/>
+                                                                     itemLabel="Mark as Foreigner"/>
 
                                             <p:selectBooleanCheckbox value="#{admissionController.current.claimable}" 
-                                                                     itemLabel="Claimable" class="mx-2 my-2"/>
+                                                                     itemLabel="Claimable" class="mx-2"/>
 
                                             <p:outputLabel value="Admitted Time"/>
                                             <p:calendar value="#{admissionController.current.dateOfAdmission}" 
                                                         id="admissionTimeStamp"
-                                                        pattern="#{sessionController.applicationPreference.longDateTimeFormat}"  class="mx-2 w-100">
-                                            </p:calendar>
+                                                        pattern="dd/MMM/yyyy - hh:mm:ss a" class="mx-2" >                               
+                                            </p:calendar>     
 
                                             <p:watermark class="mx-2" value="Referring Doctor Speciality" for="acRefDocSpe" ></p:watermark>
                                             <p:watermark class="mx-2" value="Referring Doctor" for="acRefDoc" ></p:watermark>
@@ -113,12 +105,11 @@
                                                             value="#{inwardStaffPaymentBillController.referringDoctorSpeciality}" 
                                                             completeMethod="#{specialityController.completeSpeciality}" 
                                                             var="mysp" itemLabel="#{mysp.name}" itemValue="#{mysp}"
-                                                            class="mx-2 w-100">
+                                                            class="mx-2"  >
                                                 <f:ajax event="itemSelect" execute="@this" render="acRefDoc"/>
                                                 <f:ajax event="blur" execute="@this" render="acRefDoc"/>
                                             </p:autoComplete>
-
-                                            <p:outputLabel value="Referring Doctor"/>
+                                            <p:outputLabel value=""/>
                                             <p:autoComplete id="acRefDoc" 
                                                             forceSelection="true" 
                                                             value="#{admissionController.current.referringDoctor}"
@@ -126,31 +117,32 @@
                                                             var="ix" required="true" requiredMessage="Please select referring doctor"
                                                             itemLabel="#{ix.person.name}" 
                                                             itemValue="#{ix}" 
-                                                            class="mx-2 w-100">
+                                                            class="mx-2">
                                             </p:autoComplete>
 
                                             <p:watermark value="OPD Doctor Speciality" for="acSpeciality" ></p:watermark>
                                             <p:watermark class="mx-2" value="OPD Doctor" for="scStaff" ></p:watermark>
 
-                                            <h:outputLabel value="OPD Doctor Speciality " ></h:outputLabel>
+                                            <h:outputLabel value="OPD Doctor Speciality" ></h:outputLabel>
                                             <p:autoComplete forceSelection="true" 
                                                             value="#{inwardStaffPaymentBillController.speciality}" 
                                                             id="acSpeciality"
                                                             completeMethod="#{specialityController.completeSpeciality}" 
                                                             var="mysp" itemLabel="#{mysp.name}" itemValue="#{mysp}"
-                                                            class="mx-2 w-100">
+                                                            class="mx-2">
+
                                                 <f:ajax event="itemSelect" execute="@this" render="scStaff"/>
                                                 <f:ajax event="blur" execute="@this" render="scStaff"/>
                                             </p:autoComplete>
-
-                                            <p:outputLabel value="OPD Doctor "/>
-                                            <p:autoComplete class="mx-2 w-100"  forceSelection="true" id="scStaff"
+                                            <p:outputLabel value=""/>
+                                            <p:autoComplete class="mx-2"  forceSelection="true" id="scStaff"
                                                             value="#{admissionController.current.opdDoctor}" 
                                                             completeMethod="#{inwardStaffPaymentBillController.completeStaff}"
-                                                            var="mys" itemLabel="#{mys.person.nameWithTitle}" itemValue="#{mys}">
+                                                            var="mys" itemLabel="#{mys.person.nameWithTitle}" itemValue="#{mys}"
+                                                            >
                                             </p:autoComplete>
-                                        </h:panelGrid>
 
+                                        </h:panelGrid>
                                     </p:tab>
                                     <p:tab title="Referrals" >
                                         <p:panelGrid columns="2" >
@@ -180,17 +172,18 @@
                                 <p:panel header="Other">                           
                                     <p:tabView class="p-0">
                                         <p:tab title="Guardian Detail">
-                                            <h:panelGrid columns="2" class="w-100">
-                                                <p:outputLabel  value="Name" />
-                                                <p:inputText class="w-100" id="gname" autocomplete="off" value="#{admissionController.current.guardian.name}"/>
-                                                <p:outputLabel value="NIC"/>
-                                                <p:inputText class="w-100" id="gnic" maxlength="12" autocomplete="off" value="#{admissionController.current.guardian.nic}"/>
-                                                <p:outputLabel value="Address" />
-                                                <p:inputText class="w-100" id="gadd" autocomplete="off"  value="#{admissionController.current.guardian.address}"  />
-                                                <p:outputLabel value="Mobile No" />
-                                                <p:inputText class="w-100" id="gmno"    value="#{admissionController.current.guardian.mobile}"  />
-                                                <p:outputLabel value="Home Phone No" />
-                                                <p:inputText class="w-100" id="ghno"   value="#{admissionController.current.guardian.phone}"  />
+                                            <h:panelGrid columns="1">
+                                                <!--<p:outputLabel  value="Name" />-->
+                                                <p:inputText id="gname" autocomplete="off" value="#{admissionController.current.guardian.name}"/>
+                                                <!--<p:outputLabel value="NIC"/>-->
+                                                <p:inputText id="gnic" maxlength="12" autocomplete="off" value="#{admissionController.current.guardian.nic}"/>
+                                                <!--<p:outputLabel value="Address" />-->
+                                                <p:inputText id="gadd" autocomplete="off"  value="#{admissionController.current.guardian.address}"  />
+                                                <!--<p:outputLabel value="Mobile No" />-->
+                                                <p:inputText id="gmno"    value="#{admissionController.current.guardian.mobile}"  />
+                                                <!--<p:outputLabel value="Home Phone No" />-->
+                                                <p:inputText id="ghno"   value="#{admissionController.current.guardian.phone}"  />
+
                                                 <p:watermark value="Guardian Name" for="gname" />
                                                 <p:watermark value="Guardian NIC" for="gnic" />
                                                 <p:watermark value="Guardian Address" for="gadd" />
@@ -199,21 +192,19 @@
                                             </h:panelGrid>
                                         </p:tab>
                                         <p:tab title="Appointment" >
-                                            <h:panelGrid>
-                                                <p:autoComplete forceSelection="true" id="aBill" 
-                                                                value="#{admissionController.appointmentBill}" 
-                                                                completeMethod="#{billController.completeAppointmentBill}" 
-                                                                var="apt2" itemLabel="#{apt2.patient.person.nameWithTitle}" 
-                                                                itemValue="#{apt2}" class="w-100">
-                                                    <p:ajax event="itemSelect" process="aBill" update="panSearch2" />
-                                                    <p:column>
-                                                        #{apt2.insId}
-                                                    </p:column>
-                                                    <p:column>
-                                                        #{apt2.patient.person.nameWithTitle}
-                                                    </p:column>
-                                                </p:autoComplete> 
-                                            </h:panelGrid>
+                                            <p:autoComplete forceSelection="true" id="aBill" 
+                                                            value="#{admissionController.appointmentBill}" 
+                                                            completeMethod="#{billController.completeAppointmentBill}" 
+                                                            var="apt2" itemLabel="#{apt2.patient.person.nameWithTitle}" 
+                                                            itemValue="#{apt2}" >
+                                                <p:ajax event="itemSelect" process="aBill" update="panSearch2" />
+                                                <p:column>
+                                                    #{apt2.insId}
+                                                </p:column>
+                                                <p:column>
+                                                    #{apt2.patient.person.nameWithTitle}
+                                                </p:column>
+                                            </p:autoComplete> 
 
 
                                             <h:panelGrid id="panSearch2" columns="2">
@@ -224,7 +215,7 @@
                                                 <h:outputLabel  rendered="#{admissionController.appointmentBill!=null}" value="DOB"  />
 
                                                 <h:outputLabel rendered="#{admissionController.appointmentBill!=null}" value="#{admissionController.appointmentBill.patient.person.dob}">
-                                                    <f:convertDateTime pattern="#{sessionController.applicationPreference.shortDateFormat}" />
+                                                    <f:convertDateTime pattern="dd/MM/yy" />
                                                 </h:outputLabel>
 
                                                 <h:outputLabel  rendered="#{admissionController.appointmentBill!=null}" value="Adress" />
@@ -242,7 +233,7 @@
 
             </h:panelGroup>
             <p:panel rendered="#{admissionController.printPreview}">
-                <p:commandButton ajax="false" value="New Admission" action="#{admissionController.navigateToAdmitFromMenu()}" />                   
+                <p:commandButton ajax="false" value="New Admission" actionListener="#{admiprepereToAdmitNewPatienttroller.makeNull}" />                   
                 <bill:bht admission="#{admissionController.current}"/>
             </p:panel>
 
