Closes Issue#1594 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/resources/ezcomp/menu.xhtml
+++ b/src/main/webapp/resources/ezcomp/menu.xhtml
@@ -64,7 +64,7 @@
                             <p:menuitem 
                                 ajax="false" 
                                 action="/collecting_centre/bill"  
-                                actionListener="#{billController.prepareNewBill}" 
+                                actionListener="#{collectingCentreBillController.prepareNewBill()}" 
                                 value="Collecting Centre Billing"
                                 icon="fa fa-fw fa-hospital-alt" 
                                 rendered="#{webUserController.hasPrivilege('OpdCollectingCentreBilling')}" >
